<resources>
    <string name="app_name">ToDoApp</string>

    <string name="no_tasks_found">No tasks found</string>
    <string name="task_name">Task Name:</string>
    <string name="task_date">Date:</string>
    <string name="task_creator">Task Creator:</string>
    <string name="header_todo_list">ToDo List</string>
    <string name="create_task">Create Task</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_format">DD/MM/YY</string>
    <string name="create_task_name">Task Name*</string>
    <string name="task_creator_name">Task Creator*</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="task_update_success_message">Task updated successfully!!</string>
    <string name="task_add_success_message">Task created successfully!!</string>
    <string name="task_delete_success_message">Task deleted successfully!!</string>
    <string name="validation_same_task_message">Task with same name already exists!!</string>
    <string name="validation_task_name_error_message">Please enter task name</string>
    <string name="validation_task_creator_error_message">Please enter task creator</string>
    <string name="new_notification">New Notification</string>
    <string name="application_has_internet_message">ToDo App has Internet Access</string>
    <string name="application_in_offline_mode_message">ToDo App is in Offline Mode</string>
    <string name="alert_delete">Are you sure you want to delete?</string>
</resources>